Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94345

Qt Designer crash in QQuickWidget plugin

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.2
    • 6.0.0, 6.1.0, 6.1.1
    • Tools: Designer
    • None
    • Windows 10 (64bits)

      GPU AMD Rx580 - 8Gb

      CPU Ryzen 53600

      32Gb RAM
    • Windows
    • 482125b15648944d18ae120644f9ffe11b327ff2 (qt/qttools/6.1), 244a9213d (dev), c821835d6 (6.9)

      Hi all,

      in Qt Designer Version 6.0.1, 6.1.1  crash on me when i choose for example a QquickWidget, tried to click hold and put into a form but it simply hangs and then crashes.

      In version 5.15 or below this does not happen by the way. I'm pretty new to QT and programming plus don't know where crash log is so please if needed let me know.

      Steps to reproduce: open Designer > choose a new form or open any other doesn't matter > go into Display Widgets choose > QQuickWidget > hangs.. Crash.

       Cheers!!

       

        1. qtbug94345_stack.txt
          38 kB
          Friedemann Kleint
        2. QT Creator error.png
          39 kB
          Anderson Cardoso

            kleint Friedemann Kleint
            andercard0 Anderson Cardoso
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: