Qt Designer: Enable the QWebEngineView, QQuickWidget plugins on Windows

Switch the Graphics API to OpenGL unless another value is set.

[ChangeLog][Qt Designer] Qt Designer now sets the Graphics API to OpenGL
in order to enable the QWebEngineView and QQuickWidget plugins.

Task-number: QTBUG-94345
Task-number: QTBUG-100285
Pick-to: 6.2 6.3
Change-Id: Iff55fe1a437191b56ed41168f243e6ec56a8648f
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>